kubernetes/k3s-prod-a/radarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: docker.io/linuxserver/radarr:5.17.2@sha256:03f527a304676d75350fa0c013c13e42668c4d36cc00639a4ad9a1ff558f923c
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-downloads
              mountPath: /downloads
            - name: radarr-movies
              mountPath: /movies
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: radarr-downloads
        - name: radarr-movies
          persistentVolumeClaim:
            claimName: radarr-movies
